istio-conf/securityIstioDemoApplicationRequestAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: security-istio-demo-request-authentication
  namespace: default
spec:
  selector:
    matchLabels:
     app: security-istio-demo
  jwtRules:
  - issuer: "http://localhost:4040/realms/istio"
    jwksUri: "http://my-release-keycloak-headless.default:8080/realms/istio/protocol/openid-connect/certs"
    forwardOriginalToken: true
