istio-conf/securityIstioDemoApplication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-istio-demo
  labels:
    app: security-istio-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-istio-demo
  template:
    metadata:
      labels:
        app: security-istio-demo
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: security-istio-demo
          image: 234423/security-istio-demo:v1
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: security-istio-demo
spec:
  selector:
    app: security-istio-demo
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
