istio-conf/ingressGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
     name: security-istio-demo-gateway
spec:
   selector: 
      istio: ingressgateway
   servers:
       - port:
           number: 8080
           name: http2
           protocol: HTTP
         hosts:
          - "*"
